link to api docs

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Aura Docs
+<html>
+    <head>
+        <title>Aura Project Docs</title>
+    </head>
+    <body>
+        <h1>Aura Project Docs</h1>
+        <ul>
+            <li><a href="/api">API docs</a></li>
+            <li>Manual (not yet :-)</li>
+        </ul>
+    </body>
+</html>
