link to api docs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Aura Project Docs</h1>
         <ul>
-            <li><a href="/api">API docs</a></li>
+            <li><a href="/docs/api">API docs</a></li>
             <li>Manual (not yet :-)</li>
         </ul>
     </body>
